# bujji

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  benchmark.py  benchmark_results.json  bujji.yaml  debug_ndjson.py  debug_ollama.py  debug_provider.py  debug_second_call.py  debug_second_call2.py  debug_tool_loop.py  docker-compose.yml  mkdocs.yml  pyproject.toml  stress_test.py  test_tool_loop.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
bujji/: __init__.py  agent.py  types.py
bujji/agents/: __init__.py  assistant.py  base.py
bujji/api/: __init__.py  server.py
bujji/cli/: __init__.py  main.py
bujji/config/: __init__.py
bujji/connections/: __init__.py  connection.py
bujji/connections/local/: __init__.py  config.py  local_connection.py
bujji/conversation/: __init__.py  conversation.py
bujji/core/: __init__.py  config.py  exceptions.py  models.py
bujji/hooks/: __init__.py  hook_runner.py  hooks.py  policy.py
bujji/llm/: __init__.py  service.py
bujji/mcp/: __init__.py  bridge.py
bujji/memory/: __init__.py  base.py  context_window.py  manager.py  sqlite_backend.py  vector_backend.py
bujji/planner/: __init__.py  engine.py
bujji/prompts/: __init__.py  system.md
bujji/providers/: __init__.py  airllm_provider.py  base.py  factory.py  ollama.py  openai_compat.py  openrouter.py
bujji/router/: __init__.py  engine.py
bujji/tools/: __init__.py  base.py  browser_tool.py  docker_tool.py  documentation.py  filesystem.py  git_tool.py  github_tool.py  python_exec.py  terminal.py  tool_context.py  tool_runner.py  web_search.py
bujji/triggers/: __init__.py  trigger_runner.py  triggers.py
bujji/utils/: __init__.py
docs/: index.md
docs/architecture/: core.md  memory.md  overview.md  providers.md  tools.md
docs/guides/: configuration.md  installation.md
docs/reference/: api.md  cli.md
examples/: agent_with_tools.py  airllm_god_mode.py  quickstart.py  streaming_chat.py
tests/: conftest.py  test_api.py  test_config.py  test_context_window.py  test_memory.py  test_models.py  test_planner.py  test_providers.py  test_router.py  test_tools.py
