[project]
name = "bujji"
version = "2.0.0"
description = "BUJJI - Local-first AI Agent SDK (Ollama + AirLLM)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "BUJJI Team" },
]
keywords = ["ai", "agent", "ollama", "airllm", "llm", "local", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "chromadb>=0.5.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.9.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "aiofiles>=24.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
bujji = "bujji.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]
browser = [
    "playwright>=1.47.0",
]
cuda = [
    "torch>=2.0.0",
]
all = [
    "bujji[dev]",
    "bujji[docs]",
    "bujji[browser]",
    "bujji[cuda]",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=bujji --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio.*",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
